reverse ordorder egg-text

--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
                         </but> -->
                         <a href="" class="contact-btn">CONTACT</a>
                     </div>
+                    <div class="burger">
+                        <div class="burger1"></div>
+                        <div class="burger2"></div>
+                        <div class="burger3"></div>
+                    </div>
                 </div>
             </nav>
         </header>
@@ -48,7 +53,7 @@
             <img src="./images/icon-arrow-down.svg" alt="" />
         </section>
         <section class="chess">
-            <div class="row">
+            <div class="row row1">
                 <div class="egg-text">
                     <div>
                         <h2>
