--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@
             href="https://fonts.googleapis.com/css2?family=Fraunces:wght@700;900&display=swap"
             rel="stylesheet"
         />
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
+            integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"
+        />
         <link rel="stylesheet" href="./style.css" />
     </head>
     <body>
@@ -44,6 +51,14 @@
                         <div class="burger1"></div>
                         <div class="burger2"></div>
                         <div class="burger3"></div>
+                    </div>
+                    <div class="dropdown">
+                        <ul>
+                            <li><a href="" class="nav">About</a></li>
+                            <li><a href="" class="nav">Services</a></li>
+                            <li><a href="" class="nav">Projects</a></li>
+                            <li><a href="" class="btn-dropdown">CONTACT</a></li>
+                        </ul>
                     </div>
                 </div>
             </nav>
@@ -154,7 +169,6 @@
             <div class="img3"></div>
             <div class="img4"></div>
         </section>
-        <script src="./script.js"></script>
     </body>
     <footer>
         <h3>sunnyside</h3>
@@ -178,4 +192,10 @@
             </li>
         </ul>
     </footer>
+    <div class="back-to-top" id="back">
+        <div>
+            <i class="fas fa-arrow-up"></i>
+        </div>
+    </div>
+    <script src="./script.js"></script>
 </html>
